--- a/.github/workflows/extra-docs-linting.yml
+++ b/.github/workflows/extra-docs-linting.yml
@@ -32,4 +32,4 @@ jobs:
         run: pip install antsibull-docs --disable-pip-version-check
 
       - name: Run collection docs linter
-        run: antsibull-docs lint-collection-docs .
+        run: antsibull-docs lint-collection-docs . --plugin-docs --skip-rstcheck
