--- a/changelogs/fragments/2192-fix-documentation.yml
+++ b/changelogs/fragments/2192-fix-documentation.yml
@@ -1,3 +1,5 @@
 bugfixes:
   - vcenter_standard_key_provider - Fix documentation
     (https://github.com/ansible-collections/community.vmware/pull/2192).
+  - vmware_dvswitch_nioc - Fix documentation
+    (https://github.com/ansible-collections/community.vmware/pull/2192).
