vmware_guest: Fix documentation

--- a/changelogs/fragments/2192-fix-documentation.yml
+++ b/changelogs/fragments/2192-fix-documentation.yml
@@ -3,3 +3,5 @@ bugfixes:
     (https://github.com/ansible-collections/community.vmware/pull/2192).
   - vmware_dvswitch_nioc - Fix documentation
     (https://github.com/ansible-collections/community.vmware/pull/2192).
+  - vmware_guest - Fix documentation
+    (https://github.com/ansible-collections/community.vmware/pull/2192).
