--- a/changelogs/fragments/2192-fix-documentation.yml
+++ b/changelogs/fragments/2192-fix-documentation.yml
@@ -7,3 +7,5 @@ bugfixes:
     (https://github.com/ansible-collections/community.vmware/pull/2192).
   - vmware_guest_controller - Fix documentation
     (https://github.com/ansible-collections/community.vmware/pull/2192).
+  - vmware_guest_disk - Fix documentation
+    (https://github.com/ansible-collections/community.vmware/pull/2192).
