--- a/changelogs/fragments/2192-fix-documentation.yml
+++ b/changelogs/fragments/2192-fix-documentation.yml
@@ -11,3 +11,5 @@ bugfixes:
     (https://github.com/ansible-collections/community.vmware/pull/2192).
   - vmware_guest_serial_port - Fix documentation
     (https://github.com/ansible-collections/community.vmware/pull/2192).
+  - vmware_tools - Fix documentation
+    (https://github.com/ansible-collections/community.vmware/pull/2192).
