Deprecate vmware_cluster_drs_recommendations

--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -192,6 +192,10 @@ plugin_routing:
       deprecation:
         removal_version: 6.0.0
         warning_text: Use vmware.vmware.cluster_drs instead.
+    vmware_cluster_drs_recommendations:
+      deprecation:
+        removal_version: 6.0.0
+        warning_text: Use vmware.vmware.cluster_drs_recommendations instead.
     vmware_cluster_vcls:
       deprecation:
         removal_version: 6.0.0
