--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -40,6 +40,7 @@ action_groups:
   - vmware_drs_group
   - vmware_drs_group_info
   - vmware_drs_group_manager
+  - vmware_drs_override
   - vmware_drs_rule_info
   - vmware_dvs_host
   - vmware_dvs_portgroup
