--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -214,3 +214,7 @@ plugin_routing:
       deprecation:
         removal_version: 6.0.0
         warning_text: Use vmware.vmware.cluster_vcls instead.
+    vmware_maintenancemode:
+      deprecation:
+        removal_version: 7.0.0
+        warning_text: Use vmware.vmware.esxi_maintenance_mode instead.
