--- a/tests/integration/targets/vmware_resource_pool/tasks/main.yml
+++ b/tests/integration/targets/vmware_resource_pool/tasks/main.yml
@@ -231,13 +231,13 @@
   block:
     # Remove ESXi host from cluster for tests
     - name: Enter maintenance mode
-      vmware_maintenancemode:
+      vmware.vmware.esxi_maintenance_mode:
         hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         validate_certs: false
-        esxi_hostname: "{{ esxi2 }}"
-        state: present
+        esxi_host_name: "{{ esxi2 }}"
+        enable_maintenance_mode: true
 
     - name: Move ESXi out of Cluster
       vmware_host:
@@ -251,13 +251,13 @@
         state: reconnect
 
     - name: Exit maintenance mode
-      vmware_maintenancemode:
+      vmware.vmware.esxi_maintenance_mode:
         hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
         password: "{{ vcenter_password }}"
         validate_certs: false
-        esxi_hostname: "{{ esxi2 }}"
-        state: absent
+        esxi_host_name: "{{ esxi2 }}"
+        enable_maintenance_mode: false
 
     - name: add resource pool to ESXi with check_mode
       vmware_resource_pool:
