--- a/tests/integration/targets/vmware_vmotion/tasks/main.yml
+++ b/tests/integration/targets/vmware_vmotion/tasks/main.yml
@@ -26,7 +26,7 @@
     password: '{{ vcenter_password }}'
     validate_certs: false
     esxi_host_name: '{{ item }}'
-    state: absent
+    enable_maintenance_mode: false
   with_items: '{{ esxi_hosts }}'
 
 - name: Create VM
