--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -210,6 +210,10 @@ plugin_routing:
       deprecation:
         removal_version: 7.0.0
         warning_text: Use vmware.vmware.cluster_info instead.
+    vmware_cluster_ha:
+      deprecation:
+        removal_version: 7.0.0
+        warning_text: Use vmware.vmware.cluster_ha instead.
     vmware_cluster_vcls:
       deprecation:
         removal_version: 6.0.0
