--- a/changelogs/fragments/2328-drop-HAS_PYVMOMI.yml
+++ b/changelogs/fragments/2328-drop-HAS_PYVMOMI.yml
@@ -2,3 +2,4 @@ minor_changes:
   - vmware_vsan_health_info - Drop unnecessary HAS_PYVMOMI (https://github.com/ansible-collections/community.vmware/pull/2328).
   - vmware_host_lockdown_exceptions - Drop unnecessary HAS_PYVMOMI (https://github.com/ansible-collections/community.vmware/pull/2328).
   - vmware_migrate_vmk - Drop unnecessary HAS_PYVMOMI (https://github.com/ansible-collections/community.vmware/pull/2328).
+  - vmware_host_graphics - Drop unnecessary HAS_PYVMOMI (https://github.com/ansible-collections/community.vmware/pull/2328).
