vmware_resource_pool: Drop unnecessary HAS_PYVMOMI

--- a/changelogs/fragments/2328-drop-HAS_PYVMOMI.yml
+++ b/changelogs/fragments/2328-drop-HAS_PYVMOMI.yml
@@ -4,3 +4,4 @@ minor_changes:
   - vmware_migrate_vmk - Drop unnecessary HAS_PYVMOMI (https://github.com/ansible-collections/community.vmware/pull/2328).
   - vmware_host_graphics - Drop unnecessary HAS_PYVMOMI (https://github.com/ansible-collections/community.vmware/pull/2328).
   - vmware_host_lockdown - Drop unnecessary HAS_PYVMOMI (https://github.com/ansible-collections/community.vmware/pull/2328).
+  - vmware_resource_pool - Drop unnecessary HAS_PYVMOMI (https://github.com/ansible-collections/community.vmware/pull/2328).
