--- a/meta/runtime.yml
+++ b/meta/runtime.yml
@@ -218,6 +218,14 @@ plugin_routing:
       deprecation:
         removal_version: 6.0.0
         warning_text: Use vmware.vmware.cluster_vcls instead.
+    vmware_content_deploy_ovf_template:
+      deprecation:
+        removal_version: 7.0.0
+        warning_text: Use vmware.vmware.deploy_content_library_ovf instead.
+    vmware_content_deploy_template:
+      deprecation:
+        removal_version: 7.0.0
+        warning_text: Use vmware.vmware.deploy_content_library_template instead.
     vmware_maintenancemode:
       deprecation:
         removal_version: 7.0.0
