--- a/tests/integration/targets/prepare_vmware_tests/tasks/setup_content_library.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/setup_content_library.yml
@@ -1,7 +1,10 @@
 - name: Create Content Library
-  vmware_content_library_manager:
-    library_name: test-content-lib
-    library_description: 'Library created by the prepare_vmware_tests role'
-    library_type: local
-    datastore_name: '{{ rw_datastore }}'
+  vmware.vmware.local_content_library:
+    hostname: '{{ vcenter_hostname }}'
+    username: '{{ vcenter_username }}'
+    password: '{{ vcenter_password }}'
+    name: test-content-lib
+    description: 'Library created by the prepare_vmware_tests role'
+    datastore: '{{ rw_datastore }}'
+    validate_certs: false
     state: present
